css/style.css
/* General styles */

body {
    margin: 0;
    padding: 0;
    background: #000 url('../img/background.png') no-repeat center center;
    color: #B5B5B5;
    font-family: Tahoma, sans-serif;
}

header,
main,
footer {
    text-align: center;
}

h1,
h2,
.contacts,
.contacts > a,
footer {
    font-size: .8em;
}

header {
    width: 300px;
    margin: 0 auto;
}

.contacts {
    margin-top: 30px;
}

.contacts > a {
    display: block;
    margin-top: 5px;
    color: #B5B5B5;
    text-decoration: none;
}

.logo {
    background: url('../img/palm-tree.png') no-repeat right bottom;
    overflow: visible;
}

.logo > img {
    margin-top: 100px;
}

main img {
    width: 100%;
    max-width: 261px;
    border: 4px ridge #B1B1B1;
}

footer {
    margin-bottom: 30px;
    margin-top: 50px;
}

/* Media queries */

/* Custom, iPhone Retina */
  @media only screen and (min-width : 320px) {

  }

  /* Extra Small Devices, Phones */
  @media only screen and (min-width : 480px) {

  }

  /* Small Devices, Tablets */
  @media only screen and (min-width : 768px) {
        header {
            width: 100%;
            text-align: inherit;
        }

        .logo,
        .contacts {
            display: inline-block;
        }

        .logo {
            margin-left: 10%;
        }

        .contacts {
            margin-left: 32%;
        }

        main figure {
            display: inline-block;
        }
  }

  /* Medium Devices, Desktops */
  @media only screen and (min-width : 992px) {

  }

  /* Large Devices, Wide Screens */
  @media only screen and (min-width : 1200px) {

  }

